--- a/resources/main/plop-templates/Slice/model/slices/layerSliceSlice.ts.hbs
+++ b/resources/main/plop-templates/Slice/model/slices/layerSliceSlice.ts.hbs
@@ -4,8 +4,8 @@ import { createSliceWithThunk } from "@/shared/lib/createSliceWithThunk";
 import { {{pascalCase layer}}{{pascalCase slice}}Schema } from "../types/{{pascalCase layer}}{{pascalCase slice}}Schema";
 
 const initialState: {{pascalCase layer}}{{pascalCase slice}}Schema = {
-	data: {},
-	isLoading: false,
+	data: undefined,
+	// isLoading: false,
 	// error: undefined,
 };
 
