--- a/resources/main/plop-templates/Slice/index.ts.hbs
+++ b/resources/main/plop-templates/Slice/index.ts.hbs
@@ -1,4 +1,4 @@
-export { {{camelCase layer}}{{pascalCase slice}}Slice, {{camelCase layer}}{{pascalCase slice}}Actions } from "./model/slice/{{camelCase layer}}{{pascalCase slice}}Slice";
+export { {{camelCase layer}}{{pascalCase slice}}Slice, {{camelCase layer}}{{pascalCase slice}}Actions } from "./model/slices/{{camelCase layer}}{{pascalCase slice}}Slice";
 export * as {{pascalCase layer}}{{pascalCase slice}}Selectors from "./model/selectors";
 export type { {{pascalCase layer}}{{pascalCase slice}}Schema } from "./model/types/{{pascalCase layer}}{{pascalCase slice}}Schema";
 export { {{pascalCase slice}} } from "./ui/{{pascalCase slice}}/{{pascalCase slice}}";
