Created Field for search cities, added bundle analizer, created build

--- a/resources/main/src/pages/RoomsPage/ui/RoomsPage/RoomsPage.module.scss
+++ b/resources/main/src/pages/RoomsPage/ui/RoomsPage/RoomsPage.module.scss
@@ -28,11 +28,17 @@
 
         @media (min-width: em($tablet)) {
             align-items: center;
-
         }
 
         @media (max-width: em($tablet)) {
             flex-direction: column-reverse;
         }
+    }
+}
+
+
+.Select {
+    @media (max-width: em($mobile)) {
+        font-size: rem(12);
     }
 }
