--- a/resources/main/src/pages/RoomsPage/ui/RoomsList/RoomsList.module.scss
+++ b/resources/main/src/pages/RoomsPage/ui/RoomsList/RoomsList.module.scss
@@ -12,14 +12,17 @@
    }
 
    &__empty {
-      position: fixed;
-      top: 50%;
-      left: 50%;
+      display: flex;
+      justify-content: center;
 
-      width: 100%;
-      padding: 0 rem(10);
+      // position: fixed;
+      // top: 50%;
+      // left: 50%;
 
-      transform: translate(-50%, -50%);
+      // width: 100%;
+      // padding: 0 rem(10);
+
+      // transform: translate(-50%, -50%);
       text-align: center;
 
       opacity: 0.5;
