--- a/resources/main/src/shared/ui/Fields/ui/SecondaryField/SecondaryField.module.scss
+++ b/resources/main/src/shared/ui/Fields/ui/SecondaryField/SecondaryField.module.scss
@@ -10,6 +10,8 @@
    &_readOnly {
       #{$p} {
          &__input {
+            padding-right: em(5, 24);
+
             pointer-events: none;
          }
       }
@@ -204,7 +206,10 @@
    &__input {
       width: 100%;
       padding-right: rem(60);
+
       padding-left: em(3, 24);
+
+      transition: padding-right $primaryTransition;
 
       border-bottom: $purpleColor solid em(2, 24);
       background-color: transparent;
@@ -261,9 +266,9 @@
 
    max-height: rem(200);
 
-   border: $blueColor solid em(2);
-   border-bottom-right-radius: em(10);
-   border-bottom-left-radius: em(10);
+   border: rem(1) solid $blueColor;                                                                      
+   border-radius: rem(8);
+
    background-color: $whiteColor;
 
    font-size: rem(20);
@@ -271,18 +276,22 @@
    &::-webkit-scrollbar {
       width: rem(5); 
       height: rem(5);
-  }
+   }
     
-  &::-webkit-scrollbar-thumb {
+   &::-webkit-scrollbar-thumb {
       border-radius: rem(50);
+      border-top-right-radius: rem(300);
+      border-bottom-right-radius: rem(300);
 
       background-color: $blueColor;
-  }
+   }
     
-  &::-webkit-scrollbar-track {
+   &::-webkit-scrollbar-track {
       border-radius: rem(50);
+      border-top-right-radius: rem(300);
+      border-bottom-right-radius: rem(300);
       box-shadow: inset 0 0 rem(4) rgba(0,0,0,0.2);
-  }
+   }
    
 
    > *:not(:last-child) {
