--- a/resources/main/src/shared/ui/Select/ui/SelectSecondary/SelectSecondary.module.scss
+++ b/resources/main/src/shared/ui/Select/ui/SelectSecondary/SelectSecondary.module.scss
@@ -52,7 +52,7 @@
 
         transition: opacity $primaryTransition;
 
-        border: rem(1) solid #3f409b;                                                                      
+        border: rem(1) solid ;                                                                      
         border-radius: rem(8);
         background-color: rgba(255, 255, 255, 1);
 
