--- a/resources/main/src/pages/RoomsPage/ui/RoomsList/RoomsList.module.scss
+++ b/resources/main/src/pages/RoomsPage/ui/RoomsList/RoomsList.module.scss
@@ -12,17 +12,14 @@
    }
 
    &__empty {
-      display: flex;
-      justify-content: center;
+      position: fixed;
+      top: 50%;
+      left: 50%;
 
-      // position: fixed;
-      // top: 50%;
-      // left: 50%;
+      width: 100%;
+      padding: 0 rem(10);
 
-      // width: 100%;
-      // padding: 0 rem(10);
-
-      // transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
       text-align: center;
 
       opacity: 0.5;
