--- a/resources/main/src/pages/RegisterPage/ui/RegisterPage/RegisterPage.module.scss
+++ b/resources/main/src/pages/RegisterPage/ui/RegisterPage/RegisterPage.module.scss
@@ -15,7 +15,7 @@
       left: 50%;
 
       width: 100%;
-      margin-bottom: 0;
+      margin-bottom: 0 !important;
 
       transform: translateX(-50%);
    }
